<resources>
    <string name="app_name">PizzaApp</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="add">add</string>

    <string name="product_crust">Product Crust</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="choose_product_crust_size">Choose Product Crust Size</string>
    <string name="choose_product_crust">Choose Product Crust</string>
    <string name="product_price">000</string>
    <string name="product_list_title_txt">Featured</string>
    <string name="veg_or_non_veg">Veg Or Non-Veg</string>
    <string name="product_sub_total">000</string>
    <string name="your_order">Your Order</string>
    <string name="grand_total">Grand Total</string>
    <string name="grand_total_amount">000</string>
    <string name="count_txt">10</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="delete">Delete</string>
    <string name="product_crust_name">Product Crust Name</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="one">1</string>
    <string name="no_products_available">No Products Available</string>
</resources>