<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/productNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/productPriceTxt"
        />

    <TextView
        android:id="@+id/productPriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productNameTxt"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/productCrustNameTxt"
        />

    <TextView
        android:id="@+id/productCrustNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_crust_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productPriceTxt"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/deleteCartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/delete"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adjustCountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/productSubTotalTxt"
        >

        <Button
            android:id="@+id/decrementBtn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/countTxt"
            />

        <TextView
            android:id="@+id/countTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_txt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/incrementBtn"
            app:layout_constraintStart_toEndOf="@id/decrementBtn"
            android:layout_margin="5dp"
            android:minWidth="25sp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/incrementBtn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            app:layout_constraintStart_toEndOf="@id/countTxt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/productSubTotalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_sub_total"
        app:layout_constraintTop_toBottomOf="@id/adjustCountLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/adjustCountLayout"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        app:layout_constraintTop_toBottomOf="@id/productSubTotalTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>