<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/purple_700"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/productListTitleTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_list_title_txt"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/productLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/productLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/productListTitleTxt"
        >

        <ImageView
            android:id="@+id/productIsVeg"
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_non_veg_icon"
            android:contentDescription="@string/veg_or_non_veg"
            app:layout_constraintBottom_toTopOf="@id/productNameTxt"
            />

        <TextView
            android:id="@+id/productNameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            app:layout_constraintTop_toBottomOf="@id/productIsVeg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addBtn"
            app:layout_constraintBottom_toTopOf="@id/productNameTxt"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/productPriceTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            app:layout_constraintTop_toBottomOf="@id/productNameTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addBtn"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/productDescTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            app:layout_constraintTop_toBottomOf="@id/productPriceTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="80dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/add"
            android:textSize="14sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            app:layout_constraintTop_toBottomOf="@id/productDescTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>