<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".ui.CartFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/productCartListTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_baseline_shopping_cart_24"
        app:drawableTint="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productCartListTitleTxt"
        android:layout_marginTop="10dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/billLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cartListRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            >

            <TextView
                android:id="@+id/grandTotalTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grand_total"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/grandTotalTxt"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/grandTotalTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grand_total_amount"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/grandTotalTitleTxt"
                app:layout_constraintStart_toStartOf="@id/grandTotalTitleTxt"
                app:layout_constraintEnd_toEndOf="@id/grandTotalTitleTxt"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>